# fastapi-projects

crud-app/: .env.bak  .gitignore  README.md  compose-postgresql.yml  crud_perf_test.py  main.py  pyproject.toml  settings.py
crud-app/crud/: category.py  product.py
crud-app/db/: database.py  models.py
crud-app/routers/: category_api.py  product_api.py
crud-app/schemas/: schema.py
logfparse/: .env.bak  .gitignore  README.md  compose-postgresql.yml  pyproject.toml
logfparse/log_demo_server/: Dockerfile.logdemo  go.mod  stream_demo_data.txt
logfparse/log_demo_server/cmd/: main.go
logfparse/logfparse/: main.py  settings.py
logfparse/logfparse/crud/: dhcp_request_data.py  parse_tasks.py
logfparse/logfparse/db/: database.py  models.py
logfparse/logfparse/routers/: dhcp_request_data_api.py  parse_task_api.py
logfparse/logfparse/schemas/: schema.py
logfparse/logfparse/service/: log_parser_service.py
logfparse/logfparse/tasks/: log_parser_task.py
logfparse/logfparse/utils/: foo_bar_baz.py  ip_address_validator.py  ssh_client.py  task_status.py
logfparse/logfparse/utils/parser_templates/: dhcp_request.template
logfparse/tests/: parse_ssh_test.py
multiprocess-demo/: .gitignore  README.md  processes.db  pyproject.toml
multiprocess-demo/multiprocess_demo/: db.py  main.py  process.py
ping-conn/: README.md  pyproject.toml
ping-conn/ping_conn/: main.py  ping.py
ssh-cmd/: Dockerfile  Dockerfile.ssh_server  README.md  pyproject.toml  run_ssh_servers.sh
ssh-cmd/ssh_cmd/: main.py  network_scanner.py  ssh_client.py
subnet-ssh-conn/: README.md  ip_ping.py  main.py  pyproject.toml  ssh_conn.py
