[tool.poetry]
name = "crud-app"
version = "0.1.0"
description = ""
authors = ["emrekndl <kondulemre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
faker = "^30.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
