[tool.poetry]
name = "logfparse"
version = "0.1.0"
description = ""
authors = ["emrekndl <kondulemre@gmail.com>"]
readme = "README.md"

packages = [{include = "logfparse"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
netaddr = "^1.3.0"
textfsm = "^1.1.3"
paramiko = "^3.5.0"
loguru = "^0.7.2"
fastapi-filter = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
