[tool.poetry]
name = "multiprocess-demo"
version = "0.1.0"
description = ""
authors = ["emrekndl <kondulemre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
psutil = "^6.1.0"
aiosqlite = "^0.20.0"
uvloop = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
