[tool.poetry]
name = "ssh-cmd"
version = "0.1.0"
description = ""
authors = ["emrekndl <kondulemre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
paramiko = "^3.5.0"
asyncssh = "^2.18.0"
netaddr = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
