[tool.poetry]
name = "subnet-ssh-conn"
version = "0.1.0"
description = ""
authors = ["emrekndl <kondulemre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
netaddr = "^1.3.0"
icmplib = "^3.0.4"
asyncio = "^3.4.3"
paramiko = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
